# prism

./: Cargo.toml  README.md
src/: camera.rs  gbuffer.rs  gbuffer.wgsl  lighting.wgsl  main.rs  material.rs  mesh.rs  scene.rs  shader.wgsl
