[package]
name = "prism"
version = "0.1.0"
edition = "2021"
authors = ["compiledbyutkarsh"]
description = "A real-time 3D rendering engine built from scratch in Rust using wgpu"
license = "MIT"

[dependencies]
wgpu = "0.19"
winit = "0.29"
glam = "0.27"
hecs = "0.10"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
